# 21-PersonnelApi_Logs_Documentation/src/controllers/auth.controller.js
@@ -14,6 +14,32 @@ module.exports = {
 
     login: async (req, res) => {
 
+        //!Swagger ayarları yorum satırı içinde olacak.Ve neyi değiştirmek istersem başına # swagger yazacağım
+
+        //* Array içinde tanımlamamı yapacağım birden fazla olduğu için.Sağına soluna , ; koymuyorum
+
+        //? parameters[body] login yaparken göndereceğim parametreler
+        //*schema'da login yaparken ne göndereceğimi sechema'da tanımlıyorum * required olduğunu belirtiyor
+
+        /*
+        #swagger.tags = ['Authentication']
+        #swagger.summary = 'Login'
+        #swagger.description = 'Login with username and password'
+        #swagger.parameters['body'] = {
+        in:'body', 
+        required:true,
+        schema:{
+        username:'*String',
+        password:'*String'
+
+
+        }
+        }
+
+
+
+        */
+
         const { username, password } = req.body
 
         if (username && password) {
@@ -58,6 +84,17 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token'
+            
+        */
+
+
+
+
 
         // Token Delete:
         // if (req.user) {
